project/test/semantics/unit/good/Good22_shouldEvaluateThisReference.ty
mutable class Counter {
    
    variables: {
        count: Int = 0;
    }
    
    actions: {
        increment: () -> Void = {
            this#count(this.count + 1)
        }
    }
}

singleton class WhileTest {
    
    actions: {
        main: () -> Int = {
            val counter: Counter = Counter;
            
            while (counter.count < 10) {
                counter#increment
            }
            
            counter.count // 10
        }
    }
}
